--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -158,46 +158,58 @@ main{
     
 }
 
-.small-btn-container{
+.btn-container{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 1rem;
     margin-top: 1rem;
     border-bottom: solid 1px black;
 }
 
-.big-btn-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 1rem;
-}
- .small{
+ .btn{
     background-color: var(--primary-color);
     color: var(--secondery-color);
     width: 100px;
     height: 40px;
     margin-bottom: 1rem;
- }
-.big{
-    background-color: var(--big-btn-color);
-    color: var(--secondery-color);
-    width: 100%;
-    height: 50px;
-    margin-bottom: 10px;
-}
-
-.btn{
     font-size: 2rem;
     font-weight: 5rem;
-    border: 2px solid var(--secondery-color);
     border-radius: 10px;
-}
+ }
+
 
 .btn:hover{
-    background-color: var(--primary-color);
-    color: var(--secondery-color);
+    background-color: var(--big-btn-color);
+    transform: scale(1.05);
+    box-shadow: 0 4px 6px var(--primary-color);
+
     
 }
+
+.cse{
+    background-color: #737373;
+    color: var(--primary-color);
+}
+
+.wdd{
+    background-color: #555546;
+    color: var(--secondery-color);
+}
+
+#course-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+}
+
+.course-card{
+    width: 90%;
+    text-align: center;
+}
+
 /* footer
 ............................................................... */
 
