--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -210,6 +210,10 @@ main{
     text-align: center;
 }
 
+.credit{
+    font-size: 1.5rem;
+    text-align: center;
+}
 /* footer
 ............................................................... */
 
