completed the latter-day prophets page

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -19,7 +19,7 @@ body{
 
 /* header
 ............................................................... */
-
+1
 header{
     background-color: var(--primary-color);
     color: var(--secondery-color);
