--- a/chamber/styles/join.css
+++ b/chamber/styles/join.css
@@ -276,7 +276,7 @@ form textarea {
 .membership-info button{
     border: none;
     background-image: linear-gradient(#9c2c13, #6f200e);
-    color: #fff;
+    color: var(--secondery-color);
     border-radius: 6px;
     padding: 0.9rem;
     width: 50%;
@@ -287,6 +287,24 @@ form textarea {
     font-size: 1rem;
     font-weight: bold;
     transition: background-image 0.3s ease-in-out, transform 0.2s;
+
+}
+
+.gold-info .bronze-info .silver-info .np-info {
+    opacity: 0;  /* Start invisible */
+    transform: translateY(20px); /* Start slightly lower */
+    animation: fadeInUp 1s ease-out forwards;
+}
+
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 /*dailog design*/
