--- a/chamber/styles/join.css
+++ b/chamber/styles/join.css
@@ -145,13 +145,12 @@ form div {
 
 form input[type="text"],
 form input[type="email"],
-form input[type="telephone"],
+form input[type="tel"],
 form textarea {
     background-color: var(--secondery-color);
     color: black;
     display: block;
     width: 90%;
-
     border: solid 1px #999;
     border-radius: 6px;
     padding: 0.75rem;
@@ -162,7 +161,7 @@ form textarea {
 
 form input[type="text"]:focus,
 form input[type="email"]:focus,
-form input[type="telephone"]:focus,
+form input[type="tel"]:focus,
 form textarea:focus {
     border-color: var(--primary-color);
     box-shadow: 0 0 5px rgba(0, 55, 100, 0.5);
