commit before the store

--- a/chamber/styles/discover.css
+++ b/chamber/styles/discover.css
@@ -263,6 +263,7 @@ footer .bottom{
 
     .list{
         display: flex;
+        flex-direction: row;
         justify-content: space-evenly;
     }
 
