--- a/bimproject/styles/stores.css
+++ b/bimproject/styles/stores.css
@@ -17,6 +17,7 @@
     grid-template-areas: 
     "a b b"
     "c c c"
+    "d d d"
     ;   
 }
 
@@ -37,45 +38,25 @@
     text-align: center;
 
 }
+.stores div button {
+    grid-area: d;
+    text-align: center;
+    width: 50%;
+    height: 2.5rem;
+    margin-left: 7.3rem;
+    background-color: var(--button-backgroun-color);
+    color: var(--font-color2);
+    font-size:large;
+    border: none;
+    border-radius: 4px;
+}
 
-/* Estilo para o modal */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.5);
-  }
-  
-  /* Estilo para o conteúdo do modal */
-  .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 600px;
-  }
-  
-  /* Estilo para o botão de fechar */
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
 
+
+dialog {
+    background-color: #DB504A;
+}
+ 
 
 @media (min-width: 614px) {
 
